# ai-sales-trainer-poc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  constants.py  logging_config.py  main.py  retry.py
app/api/: __init__.py  chat.py  evaluate.py  navigation.py  qualification.py  questions.py  rag.py  scenarios.py  value_prop.py  voice.py
app/services/: __init__.py  conversation.py  document_processor.py  elevenlabs_service.py  evaluation.py  llm.py  openai_voice_service.py  scenarios.py  vector_store.py  voice_service.py
app/storage/: base.py  local.py  s3.py
app/utils/: __init__.py  json_parser.py  llm_helpers.py
prompts/: evaluator.txt  nepq_opening_inbound.txt  nepq_opening_outbound.txt  persona_clevel.txt  persona_procurement.txt  persona_technical.txt  rag_system.txt  spin_phase_guidance.txt
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: EVALUATION_ISSUES.md  conftest.py  test_conversation_flow.py  test_evaluation_endpoint.py  test_persona_reactions.py  test_rag_sources.py
tests/examples/conversations/: excellent_discovery.json  good_monetization.json  premature_pitch.json  too_many_situation.json
tests/examples/methodology/: nepq_qa.json  spin_qa.json
tests/examples/opportunities/: cloud_migration.json  it_governance.json
tests/examples/questions/: spin_implication.json  spin_needpayoff.json  spin_problem.json  spin_situation.json
tests/examples/value_propositions/: bad_pushy.json  good_consultative.json
